--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <ul class="answer-list">
                 <!--Список ответов -->
             </ul>
-            <button class="answer-button">Next</button>
+            <button class="answer-button" disabled>Next</button>
             <div class="score-wrap">
                 <p>Your score: 0</p>
                 <button class="restart-button">Restart</button>
