added the ability to select multiple answer options

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Подключение внешних стилей -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="quiz">
@@ -15,6 +15,7 @@
             <div class="question__text">
                 <p>Question text</p>
             </div>
+            <span class="question__message hidden">You can select several answer options.</span>
             <ul class="answer-list">
                 <!--Список ответов -->
             </ul>
