implementation of adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <div class="quiz">
     <div class="quiz__container">
-        <div class="question">
-            <div class="question__title">
-                <p>Question: 0</p>
-            </div>
-            <div class="question__text">
-                <p>Question text</p>
-            </div>
-            <span class=" hidden question__message ">You can select several answer options.</span>
-            <ul class="answer-list">
-                <!--Список ответов -->
-            </ul>
-            <button class="answer-button">Answer</button>
-            <div class="score-wrap">
-                <button class="restart-button">Restart</button>
-                <button class="next-button" disabled>Next</button>
+        <div class="question-wrapper">
+            <div class="question">
+                <div class="question__title">
+                    <p>Question: 0</p>
+                </div>
+                <div class="question__text">
+                    <p>Question text</p>
+                </div>
+                <span class=" hidden question__message ">You can select several answer options.</span>
+                <ul class="answer-list">
+                    <!--Список ответов -->
+                </ul>
+                <button class="answer-button">Answer</button>
+                <div class="score-wrap">
+                    <button class="restart-button">Restart</button>
+                    <button class="next-button" disabled>Next</button>
+                </div>
             </div>
         </div>
     </div>
